--- a/_posts/2016-07-03-dona-deos.markdown
+++ b/_posts/2016-07-03-dona-deos.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Dona deos"
 date:   2016-07-03 13:56:46 +0300
 categories: jekyll update
+featured: true
 ---
 
 ## Sublatus desierant annis concurretque tenebat nec fortis
