--- a/_posts/project/2016-07-03-project-3.markdown
+++ b/_posts/project/2016-07-03-project-3.markdown
@@ -2,7 +2,8 @@
 layout: post
 title:  "Possem me illa"
 date:   2016-07-03 13:56:46 +0300
-categories: jekyll update
+categories: project
+tags: code
 ---
 
 ## Et vocem
