--- a/_posts/blog/2016-07-03-dona-deos.markdown
+++ b/_posts/blog/2016-07-03-dona-deos.markdown
@@ -2,8 +2,9 @@
 layout: post
 title:  "Dona deos"
 date:   2016-07-03 13:56:46 +0300
-categories: jekyll update
+categories: blog
 featured: true
+tags: design code
 ---
 
 ## Sublatus desierant annis concurretque tenebat nec fortis
