--- a/_posts/project/2016-07-03-project-2.markdown
+++ b/_posts/project/2016-07-03-project-2.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Project 2"
 date:   2016-07-03 13:56:46 +0300
 categories: project
-featured_image: "images/project.svg"
+featured_image: "/images/project.svg"
 tags: article
 ---
 
