--- a/_posts/project/2016-07-03-project-2.markdown
+++ b/_posts/project/2016-07-03-project-2.markdown
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Project 2"
+title:  "NodeJS Services In Production"
 date:   2016-07-03 13:56:46 +0300
 categories: project
-featured_image: "/images/project.svg"
+featured_image: "/images/project-images/nodejs-new-pantone-black.png"
 tags: article
 ---
 
